<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/contacts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="false"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/text_view_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="1"
                android:text="@string/btn_1"
                android:onClick="onPhoneButtonClick" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="2"
                android:text="@string/btn_2"
                android:onClick="onPhoneButtonClick"/>

            <Button
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="3"
                android:text="@string/btn_3"
                android:onClick="onPhoneButtonClick"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="4"
                android:text="@string/btn_4"
                android:onClick="onPhoneButtonClick"/>

            <Button
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="5"
                android:text="@string/btn_5"
                android:onClick="onPhoneButtonClick"/>

            <Button
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="6"
                android:text="@string/btn_6"
                android:onClick="onPhoneButtonClick"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="7"
                android:text="@string/btn_7"
                android:onClick="onPhoneButtonClick"/>

            <Button
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="8"
                android:text="@string/btn_8"
                android:onClick="onPhoneButtonClick"/>

            <Button
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="9"
                android:text="@string/btn_9"
                android:onClick="onPhoneButtonClick"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_asterisk"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="*"
                android:text="@string/btn_asterisk"
                android:onClick="onPhoneButtonClick"/>

            <Button
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="0"
                android:text="@string/btn_0"
                android:onClick="onPhoneButtonClick"/>

            <Button
                android:id="@+id/btn_hash"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="#"
                android:text="@string/btn_hash"
                android:onClick="onPhoneButtonClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_backspace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1.0"
                style="@style/PhoneButton"
                android:tag="backspace"
                android:text="@string/btn_backspace"
                android:onClick="onPhoneButtonClick"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>